<resources>
    <string name="app_name">Whac-A-Mole</string>
    <string name="cd">cd</string>
    <string name="play">PLAY</string>
    <string name="score">Score</string>
    <string name="txt30">30</string>
    <string name="txt0">0</string>
    <string name="play_again">Play again</string>
    <string name="menu">Menu</string>
    <string name="best">Best</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="new_record">New Record!</string>
</resources>